--- a/services/scraper-svc/package.json
+++ b/services/scraper-svc/package.json
@@ -8,13 +8,19 @@
   "license": "MIT",
   "scripts": {
     "lint": "tslint --project ./tsconfig.json",
+    "lint:watch": "chokidar \"src/**/*.ts\" --command \"yarn run lint --force\" --initial --verbose --ignore \"node_modules\"",
     "build": "yarn run lint && tsc",
-    "start": "node build/index.js"
+    "start": "node build/index.js",
+    "start-dev": "concurrently --names \"lint,nodemon\" --prefix \"{name}-{pid}\" \"yarn run lint:watch\" \"nodemon\""
   },
   "dependencies": {
     "typescript": "^3.0.1"
   },
   "devDependencies": {
+    "chokidar-cli": "^1.2.0",
+    "concurrently": "^4.0.1",
+    "nodemon": "^1.18.3",
+    "ts-node": "^7.0.1",
     "tslint": "^5.11.0",
     "tslint-config-airbnb": "^5.10.0"
   }
